fix spacing

--- a/styles/toolbar.css
+++ b/styles/toolbar.css
@@ -68,7 +68,7 @@
 #toolbar ul li #logo {
     /* self-sizing */
     height: calc(var(--toolbar-height) * 0.9);
-    padding: 0% 10px;
+    padding: 0% 20px;
     vertical-align: middle; /* this is its own inline item thing */  
 }
                 
